--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ subprojects {
         annotationProcessor 'org.projectlombok:lombok'
 
         implementation 'mysql:mysql-connector-java'
+
+        implementation 'org.springframework.security:spring-security-oauth2-client'
+        implementation 'org.springframework.security:spring-security-oauth2-jose'
+        implementation 'org.springframework.boot:spring-boot-starter-security'
     }
 }
 
