--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ subprojects {
         implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
         implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+        implementation 'io.jsonwebtoken:jjwt:0.9.1'
     }
 }
 
