--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
         implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+        implementation 'org.springframework.boot:spring-boot-starter-webflux'
     }
 }
 
